Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,8 +14,8 @@ variables:
 
 steps:
 - task: DotNetCoreCLI@2
-  displayName: 'Install dotnetsay'
+  displayName: Build
   inputs:
-    command: custom
-    custom: tool
-    arguments: 'install -g dotnetsay'
+    command: build
+    projects: '**/*.csproj'
+    arguments: '--configuration Release' # Update this to match your need
